kubernetes/registry/deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  labels:
    app: registry
spec:
  selector:
    matchLabels:
      app: registry
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:2
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: config-configmap
          mountPath: /etc/docker/registry/
        - name: datas-storage
          mountPath: /var/lib/registry
      volumes:
      - name: config-configmap
        configMap:
          name: registry-configmap
      - name: datas-storage
        hostPath:
          path: "/var/kubernetes/registry/datas"
          type: DirectoryOrCreate
