kubernetes/registry/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry
  annotations:
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: registry.my_domain.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: registry
          servicePort: 5000
